# advent-of-code-rust

./: .gitignore  Cargo.toml  Makefile  README.md  day1  day2.rs  day3  day3.rs  main  main.rs
2021/: day1.rs  day14_dump.py  day2  day3  day3.rs  day4  day4.rs  day5  day5.rs
2022/day1/: day1.rs
2024/day1/: main.rs  part2.rs
2024/day10/: main.rs
2024/day11/: main.rs
2024/day12/: main.py  main.rs
2024/day2/: day2.py  main.rs  part2.rs
2024/day3/: main.rs  part2.rs
2024/day4/: main.py  main.rs  part2.py  ws.py
2024/day5/: main.rs
2024/day6/: main.rs
2024/day7/: main.rs  test.txt
2024/day8/: main.rs
2024/day9/: day9.py  main.rs  wring.txt
2024/template/: main.rs
src/: day1.rs  day12.rs  day13.rs  day14.rs  day15.rs  day16.rs  lattice.rs  main.rs  utils.rs
src/data/day16/: test.txt  test2.txt
