[package]
name = "advent-of-code-rust"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

[[bin]]
name = "advent-of-code-rust"
path = "main.rs"

[[bin]]
name = "day1"
path = "2024/day1/main.rs"

[[bin]]
name = "day1_part2"
path = "2024/day1/part2.rs"

[[bin]]
name = "day2"
path = "2024/day2/main.rs"

