[package]
name = "advent-of-code-rust"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
regex = "1"

[[bin]]
name = "advent-of-code-rust"
path = "main.rs"

[[bin]]
name = "day1"
path = "2024/day1/main.rs"

[[bin]]
name = "day1_part2"
path = "2024/day1/part2.rs"

[[bin]]
name = "day2"
path = "2024/day2/main.rs"

[[bin]]
name = "day2_part2"
path = "2024/day2/part2.rs"

[[bin]]
name = "day3"
path = "2024/day3/main.rs"

[[bin]]
name = "day3_part2"
path = "2024/day3/part2.rs"

[[bin]]
name = "day4"
path = "2024/day4/main.rs"

[[bin]]
name = "day5"
path = "2024/day5/main.rs"